# research_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/dean_research_tools/: __init__.py  config.py  embeddings.py  models.py  retriever.py
src/dean_research_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_func_args_sync.py  test_tools_locally.py
